Fix title/header spacing

--- a/css/main.css
+++ b/css/main.css
@@ -88,25 +88,27 @@ pre {
 }
 
 .header {
+  font-size: 24px;
+  margin-top: 24px;
   text-align: center;
 }
 
-.header .title a {
+.header .title {
   font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
   text-decoration: none;
-  font-size: 24px;
   color: #849;
 }
 
 #particles-js {
+  margin: 1em 0;
   position: relative;
-  height: 400px;
+  height: 440px;
 }
 
 #particles-js .header {
   position: absolute;
-  top: 1em;
+  top: 6px;
   left: 0;
   right: 0;
   margin: auto;
@@ -124,7 +126,7 @@ pre {
 
 .about {
   position: absolute;
-  top: 1em;
+  top: 2em;
   left: 0;
   right: 0;
   margin: auto;
@@ -316,7 +318,7 @@ input[type=submit]:hover {
     line-height: 1.5em;
   }
 
-  .header .title a {
+  .header {
     font-size: 33px;
   }
 
